@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Added experimental StL model importing (ASCII format only).
+
 * [DanielPharos]: Added mouse scroll wheel support in various places.
 
 * [DanielPharos]: Fixed long-standing bug with character output (backslashes) in the console. Note:
